--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,24 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-
+<link href="https://fonts.googleapis.com/css?family=Risque" rel="stylesheet">
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+
+  <script type = "text/javascript" 
+         src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js">
+      </script>
+
+  <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
+  <script type="text/javascript" src="assets/js/jquery.fireworks.js"></script>
+
 
   <!-- un-comment this code to enable service worker
   <script>
@@ -34,6 +45,8 @@
 
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
+
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
