--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,47 @@
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <ion-title>
       Ionic Blank
     </ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+	<ion-grid>
+		<ion-row>
+			<ion-col col-4 class='time'>
+				<span>{{minutesShow}}</span>:<span>{{secondsShow}}</span>
+			</ion-col>
+			<ion-col col-4 class='moves'>
+				<span>{{moves}}</span>
+			</ion-col>
+			<ion-col col-4 class='icon'>
+				<ion-icon name='pause' *ngIf='state == "play"' (click)='pause()'></ion-icon>
+				<ion-icon name='play' *ngIf='state == "pause"' (click)='play()'></ion-icon>
+			</ion-col>	
+		</ion-row>
+	</ion-grid>		
+
+	<ion-grid class='bricks-grid'>
+		<ion-row>
+			<ion-col col-3 *ngFor='let brick of brickNumbers;let i=index'>
+				 <div class="card-container">
+				  <div class='card' >
+				  	<div class="front"></div>
+				  	<div class="back">
+				  		<img src={{images[i]}}>
+				  	</div>
+				  </div>
+				 </div>
+			</ion-col>
+		</ion-row>
+	</ion-grid>	
+
+	<ion-fab left bottom (click)='goBack()'>
+		<button ion-fab color="primary">
+			<ion-icon name='home'></ion-icon>
+		</button>
+	</ion-fab>
+
 </ion-content>
